# Data_base

./: 1.txt  CMakeLists.txt  README.md
data/: 1.txt  c.txt  countries.csv  countries.txt
inc/: file_parsing.h  file_work.h  interface.h  main.h  table.h  tree.h
src/: data.txt  file_parsing.c  file_work.c  interface.c  main.c  table.c  tree.c
